@@ -1,3 +1,10 @@
+2008-12-03  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclFileName.c (DoGlob):    One of the
+	Tcl_FSMatchInDirectory() calls did not have its return code checked.
+	This caused error messages returned by some Tcl_Filesystem drivers
+	to be swallowed.
+
 2008-12-02  Don Porter  <dgp@users.sourceforge.net>
 
 	TIP #336 IMPLEMENTATION
